--- a/admin/assets/css/admin.css
+++ b/admin/assets/css/admin.css
@@ -1,18 +1,26 @@
 /* This stylesheet is used to style the admin option form of the plugin. */
 
 
-    label {
-        display: inline-block;
-        width  : 200px;        
-    }
-    .lower_part{
-    	margin-top: 20px;
-    }
-    .upper_part{
-        background: none repeat scroll 0 0 #f4e7ea;
-        border: 1px solid #986265;
-        height: 40px;
-    }
+  label {
+      display: inline-block;
+      width  : 200px;        
+  }
+  label.error {
+      display: inline-block;
+      width  : 100%;        
+      color : red;
+  }
+  .wid-15{
+      width:15%;
+  }
+  .lower_part{
+  	margin-top: 20px;
+  }
+  .upper_part{
+      background: none repeat scroll 0 0 #f4e7ea;
+      border: 1px solid #986265;
+      height: 40px;
+  }
 	.side_l {
 		background: none repeat scroll 0 0 #f4e7ea;
 		position: relative; 
@@ -22,7 +30,6 @@
 		height: 100%;
 		float: left;
 	}
-
 	.side_r {
 		position: relative;
 		top: 0px;
@@ -101,5 +108,5 @@
         width: 100% ;
      }
      #morsel-wrapper-thumbnail { text-align: center;}
-
+     
      
