css changes for table list

--- a/admin/assets/css/admin.css
+++ b/admin/assets/css/admin.css
@@ -109,11 +109,13 @@
      }
      #morsel-wrapper-thumbnail { text-align: center;}
     .wp-list-table .column-action { width: 15%; }
-    .wp-list-table .column-categories { width: 30% !important; }
+    .wp-list-table .column-categories { width: 25% !important; }
     .wp-list-table .column-date { width: 15% !important; }
     .wp-list-table .column-author { width: 15% !important; }
     .wp-list-table .column-title { width: 25% !important; }
-    
+    .wp-list-table .column-current-keyowrd { width: 20% !important; }
+
+
     #morsel_keyword_button{
       margin-right: 10px;
     }
