--- a/admin/assets/infinite-scroll/scroll.css
+++ b/admin/assets/infinite-scroll/scroll.css
@@ -1,12 +1,12 @@
-	#ajaxLoader{
+	#ajaxLoader,.ajaxLoader{
 		display: none;
 		text-align: center;
 	}
-    #no-more{
+  #no-more,.no-more{
 		background: none repeat scroll 0 0 #EEEEEE;
-	    border: 1px solid #CFCFCF;
-	    color: #000000;
-	    display: none;
-	    font-weight: bold;
-	    padding: 5px;
-    }
+    border: 1px solid #CFCFCF;
+    color: #000000;
+    display: none;
+    font-weight: bold;
+    padding: 5px;
+  }
