responsive fixes for community

--- a/widget_assests/css/morsel_list.css
+++ b/widget_assests/css/morsel_list.css
@@ -1310,7 +1310,7 @@
 .morsel-iso .mrsl-top-border {
   border-top: 1px solid #ccc;
   margin-top: 10px;
-  padding-top: 10px;
+  padding: 5px;
 }
 
 /*end create item details shortcode css*/
